scss/dialogs/_group-styles.scss
p.group-name,
input.group-name-input {
  margin-left: 0px;
  margin-bottom: 0px;
  font-size: x-large;
  width: 100%;
  border: 0;
  height: auto;
  background-color: transparent;
  color: var(--bp4MenuText);
  user-select: text;
}

input.group-name-input {
  border-bottom: solid;
  border-color: var(--loginInputFocusColor);
}
div.group-separator {
  margin: 20px -20px 0px -20px;
  padding: 10px 15px;
  background-color: var(--bp4DialogBgSecondary);
  color: var(--bp4MenuText);
  &.no-margin {
    margin: 0px;
  }
}

div.group-settings-container {
  margin-top: -8px;
  margin-left: -20px;
  margin-right: -20px;
  padding: 0px 65px 0px 20px;
  display: flex;
  align-items: center;
  .group-name {
    overflow: hidden;
    text-overflow: ellipsis;
    line-height: 1;
  }

  div.group-name-input-wrapper {
    margin-left: 17px;

    input.group-name-input {
      // width: calc(100% - 65px - 17px);
      top: -7px;
      position: relative;
    }

    p.input-error {
      color: var(--colorDanger);
      position: absolute;
    }
  }
}

div.group-member-contact-list-wrapper {
  overflow: scroll;
  max-height: calc(100% - 46px);
  margin-left: -20px;
  margin-right: -20px;
}

div.group-related-chats-list-wrapper {
  margin-left: -20px;
  margin-bottom: -20px;
}

div.group-image-wrapper {
  position: relative;
  div.group-image-edit-button {
    position: absolute;
    width: 28px;
    height: 28px;
    padding: 4px;
    left: -3px;
    top: 5px;
    background-color: var(--colorPrimary);
    border-radius: 50%;
    z-index: 5;
    &:hover {
      cursor: pointer;
      opacity: 0.96;
    }
    div {
      height: 20px;
      width: 20px;
      @include color-svg('../images/lead-pencil.svg', white);
    }
  }
}

